# asl_turtlebot

./: .gitignore  CMakeLists.txt  frames.gv  package.xml  plugin.xml
HW1/: P2_pose_stabilization.py
cfg/: navigator.cfg  squirtlebot.perspective  squirtlebot2.perspective  squirtlebot3.perspective
launch/: project_sim.launch  squirtle_fsm_test.launch  turtlebot3_nav_sim.launch
models/apple_box/materials/scripts/: apple_pat.material
models/banana_box/materials/scripts/: banana_pat.material
models/bulbasaur_box/materials/scripts/: bulbasaur_pat.material
models/cake_box/materials/scripts/: cake_box.material
models/carrot_box/materials/scripts/: carrot_pat.material
models/charmander_box/materials/scripts/: charmander_pat.material
models/dog_box/: model.config
models/dog_box/materials/scripts/: cake_box.material
models/hotdog_box/materials/scripts/: hotdog_pat.material
models/orange_box/: model.sdf
rqt_plugin/: CMakeLists.txt  SquirtleBotCommander.cpp  SquirtleBotCommander.h  SquirtleBotCommander.ui
rviz/: project_sim.rviz
scripts/: detector.py  detector_mobilenet.py  detector_viz.py  navigator.py  navigator_K.py  navigator_smach.py  pose_controller.py  request_publisher.py  squirtle.py  supervisor.py  supervisor_nav.py
scripts/HW1/: P2_pose_stabilization.py
scripts/HW4/: ExtractLines.py  ekf.py  turtlebot_model.py
scripts/controllers/: P2_pose_stabilization.py  P3_trajectory_tracking.py
scripts/planners/: P1_astar.py  path_smoother.py
urdf/: turtlebot3_burger.gazebo.xacro
world/: project_city.world
(+2 files in other folders)
